add jvm params